<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:background="@color/black"
        android:gravity="end|bottom"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:onClick="onOperator"
            android:text="@string/_divide"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="6dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:onClick="onDigit"
            android:text="@string/_4"
            />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="6dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:onClick="onDigit"
            android:text="@string/_5"
            />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="6dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:onClick="onDigit"
            android:text="@string/_6"
            />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="6dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:backgroundTint="@color/orange"
            android:onClick="onOperator"
            android:text="@string/_multiply"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="6dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:onClick="onDigit"
            android:text="@string/_1"
            />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="6dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:onClick="onDigit"
            android:text="@string/_2"
            />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="6dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:onClick="onDigit"
            android:text="@string/_3"
            />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:onClick="onOperator"
            android:text="@string/_subtract"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDecimalPoint"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_marginHorizontal="6dp"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:layout_marginHorizontal="6dp"
            android:text="@string/C"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:onClick="onOperator"
            android:layout_marginHorizontal="6dp"
            android:text="@string/add"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:onClick="onEqual"
            android:text="@string/equal" />
    </LinearLayout>
</LinearLayout>